Update readme, clean up unused files

--- a/README.me
+++ b/README.me
@@ -1,1 +1,1 @@
-From The Odin Project's [curriculum](http://www.theodinproject.com/courses/web-development-101/lessons/html-css)
+Started out as the Google homepage rebuild from The Odin Project's [curriculum](http://www.theodinproject.com/courses/web-development-101/lessons/html-css), but has morphed into a rebuild of the alt.gothic.fashion FAQ from long, long ago. It's a for-fun project to help me work on my HTML, CSS, JS and Ruby skills. It'll start out pretty boring and static and hopefully become more exciting and responsive over time...
